feat(reporting): implement multi-model ReportProfile architecture and dynamic settings